[PLAT-146407] Fix Java Signature Help (#170)
Not a stacked PR because the other PRs are independent, but I'm unable
to test this fix without having all the other bugfixes in my build. Only
the last commit is for the signature help fix
https://github.com/REDACTED_ORG/metals/pull/170/commits/2c93807b7f46636773defcb562be6e16b52bd27f

I manually confirmed that signature help is now working as I expect it
in the
bazel/toolchains/java/plugins/error_prone/src/main/java/com/databricks/error_prone/checks/PackagePrivateChecker.java
file.



https://github.com/user-attachments/assets/7dcf144f-cd7b-44d2-84d1-4eaaf03fadaa


The unrelated commits in this stack

- **[PLAT-146401]: Fix ArrayIndexOutOfBoundsException**
- **[PLAT-146409] don't enable -Xlint:all by default**
- **[PLAT-146408]: don't report errors when using java compiler APIs**
- **[PLAT-146406]: fix concurrency bug when compiling java files**


[PLAT-146401]:
https://databricks.atlassian.net/browse/PLAT-146401?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ
[PLAT-146409]:
https://databricks.atlassian.net/browse/PLAT-146409?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ
[PLAT-146408]:
https://databricks.atlassian.net/browse/PLAT-146408?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ
[PLAT-146406]:
https://databricks.atlassian.net/browse/PLAT-146406?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ
[PLAT-146407]:
https://databricks.atlassian.net/browse/PLAT-146407?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ